tests/specs/ecosystem/mebus/mebus/1_0_2.test
mebus/mebus/1.0.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:zod@^3.22.4": "npm:zod@3.23.8"
    },
    "npm": {
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS1192 [ERROR]: Module '"file:<global_npm_dir>/zod/3.23.8/index.d.ts"' has no default export.
 */ import z from "npm:zod@^3.22.4";
           ^
    at file://<tmpdir>/index.ts:4:12

TS1195 [ERROR]:     'export *' does not re-export a default.
    export * from "./lib";
    ~~~~~~~~~~~~~~~~~~~~~~
        at file:<global_npm_dir>/zod/3.23.8/index.d.ts:1:1

error: Type checking failed.

